# sst-voicemanager

./: .gitignore  CMakeLists.txt  LICENSE.md
.github/workflows/: build-pr.yml  code-checks.yml
doxygen/: Doxyfile
include/sst/voicemanager/: midi1_to_voicemanager.h  voicemanager.h  voicemanager_constraints.h  voicemanager_impl.h
include/sst/voicemanager/managers/: polymanager.h
scripts/: fix_file_comments.pl  fix_header_guards.pl
tests/: basic.cpp  basic_poly.cpp  continuation_data.cpp  hierarchical_groups.cpp  legato_playback.cpp  main.cpp  midi1_to_vm.cpp  mono_playback.cpp  mpe_tests.cpp  multi_port.cpp  note_ids.cpp  note_on_return.cpp  piano_mode.cpp  playmode_change.cpp  priority_mono.cpp  routing_params.cpp  stealing_groups.cpp  stealing_maxvoice.cpp  stealing_priorities.cpp  test_player.h  voice_ids.cpp
